# pedelec

./: .gitignore  README.md  README.zh-TW.md
.github/workflows/: deploy-docs.yml  release.yml
demo/shape-rain-demo/: .dockerignore  Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
demo/solid-sdk-demo/: vite.config.ts
desktop/: index.html  package-lock.json  package.json  tsconfig.json
desktop/scripts/: stage-tauri-binaries.mjs
desktop/src/: main.tsx  style.css
desktop/tauri/: Cargo.toml  tauri.conf.json
desktop/tauri/capabilities/: default.json
desktop/tauri/src/: lib.rs  pedelec_app.rs  pedelec_cli.rs  pedelec_core.rs  pedelec_ipc.rs  pedelec_native_host.rs  pedelec_native_registration.rs  pedelec_paths.rs  pedelec_upload.rs  provider_installer.rs  provider_terminal.rs
desktop/tauri/src/agent/: README.zh-TW.md  cli.rs  config.rs  error.rs  jsonl.rs  mod.rs  model.rs  model_capabilities.rs  runtime.rs  sandbox.rs  session.rs  tools.rs
desktop/tauri/src/pedelec_core/tests/: mod.rs
desktop/tauri/src/pedelec_ipc/tests/: mod.rs
desktop/tauri/tests/: core.rs  ipc.rs
desktop/tauri/tests/core/: assets.rs  ollama.rs  settings.rs  tools.rs
desktop/tauri/tests/ipc/: limits.rs  protocol.rs
dev-docs/: DOCS_PLAN.md  README.md  astro.config.mjs  package-lock.json  package.json
extension/: background.js  background.test.js  i18n.js  localization.test.js  manifest.json  popup.html  popup.js
extension/demo-skills/: tools.md
sdk/: README.md  package-lock.json  package.json
(+97 files in other folders)
