[package]
name = "pedelec-app"
version = "0.1.2"
description = "Pedelec"
authors = ["Isaac Lin"]
edition = "2021"
default-run = "pedelec-app"
autobins = false

[lib]
name = "pedelec_lib"
path = "src/lib.rs"

[[bin]]
name = "pedelec-app"
path = "src/bin/pedelec-app.rs"

[[bin]]
name = "pedelec-native-host"
path = "src/bin/pedelec-native-host.rs"

[[bin]]
name = "pedelec-cli"
path = "src/bin/pedelec-cli.rs"

[[bin]]
name = "pedelec-agent"
path = "src/bin/pedelec-agent.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde", "clock"] }
dirs = "6"
encoding_rs = "0.8"
jsonschema = { version = "0.46.5", default-features = false }
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "rustls"] }
sha2 = "0.10"
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
uuid = { version = "1", features = ["v7", "std"] }

[dev-dependencies]
tempfile = "3"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Globalization"] }
winreg = "0.52"
